--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 safe: true
-baseurl: /
-url: http://localhost:4000
+baseurl: "http://mzj.github.io/php-the-right-way/"
 
 pygments: true
 markdown: maruku
